--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,6 +24,7 @@ body {
   color: #0c1b20;
   background: #e4dccd;
   transition: background 0.3s;
+  overflow-x: hidden !important;
   &.menu_opened {
     overflow: hidden !important;
   }
@@ -375,31 +376,69 @@ a {
       }
     }
   }
-  .prudcut_image:hover {
-    opacity: 1;
-
-    .product_inner {
-      opacity: 1;
-    }
-    .product_links{
-      z-index: 999;
-      svg{
-        fill: white;
-      }
-    }
-  }
+}
+.prudcut_image:hover {
+  opacity: 1;
 
   .product_inner {
-    position: absolute;
-    z-index: 99;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: 0.5s;
+    opacity: 1;
+  }
+  .product_links{
+    z-index: 999;
+    svg{
+      fill: white;
+    }
   }
 }
+
+.product_inner {
+  position: absolute;
+  z-index: 99;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.filter_line{
+  input{
+    display: none;
+  }
+  label{
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    cursor: pointer;
+    
+  }
+  .check_label{
+    user-select: none;
+  }
+  .square_block{
+    width: 22px;
+    height: 22px;
+    background: white;
+    border: 1px solid rgba(#D3BA87 , 0.6);
+    span{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  input[type="checkbox"]:checked + .square_block {
+    background: #D3BA87;
+    span {
+      opacity: 1;
+    }
+  }
+
+}
+
 
 .checkbox_line{
   position: relative;
@@ -467,12 +506,6 @@ a {
     margin-bottom: 30px;
     font-size: 20px;
   }
-}
-
-.main_slider {
-  // background: url('../public/images/mainBanner2.png') no-repeat;
-  background-position: top center;
-  background-size: cover;
 }
 
 .slick_wrapper {
@@ -598,6 +631,7 @@ a {
   }
 }
 
+
 .loader {
   width: 48px;
   height: 48px;
@@ -633,7 +667,6 @@ a {
   }
 }
 
-
 .login_popup{
   transition: opacity 0.3s;
 }
@@ -659,7 +692,6 @@ a {
 
 .success_opened {
   width: calc(100% - 17px);
-
   .success_popup {
     top: 0;
     padding-left: 0;
@@ -674,12 +706,12 @@ a {
   }
 }
 
-.ellipsis2 {
+.ellipsis1 {
   position: relative;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
 }
 
@@ -728,135 +760,58 @@ input::-webkit-inner-spin-button {
 }
 
 @media (max-width: 1199px) {
-  .bannerWrapper {
-    .horizontal-row {
-      gap: 10px;
+  .slick_wrapper {
+    .slider_title {
+      font-size: 24px;
+      line-height: 1.6;
+      max-width: 320px;
     }
-
-    .form_block {
-      margin-bottom: 10px;
-
-      input {
-        height: 40px;
-      }
-
-      .loginForm_label {
-        font-size: 12px;
-
-        span {
-          font-size: 11px;
-        }
-      }
+    .slider_description {
+      font-size: 18px;
+      margin-top: 10px;
     }
-
-    .css-13cymwt-control,
-    .css-t3ipsp-control {
-      height: 40px;
+    .slider_content {
+      max-width: 320px;
+      padding-bottom: 15px;
+      left: 25px;
     }
-  }
-
-  .review_opened {
-    width: 100%;
-
-    .review_popup {
-      top: 0;
-      padding-left: 0;
+    .slick-active .slider_content {
+      bottom: 40px;
+      opacity: 1;
     }
-  }
-
-  .success_opened {
-    width: 100%;
-
-    .success_popup {
-      top: 0;
-      padding-left: 0;
-    }
-  }
-
-  .slick-track {
-    gap: 20px !important;
-  }
-
-  .slick-slider {
     .slick-dots {
-      margin-left: 20px;
+      right: 20px;
+      bottom: 40px;
+      li button {
+        width: 55px;
+      }
     }
   }
 }
 
-@media (max-width: 991px) {
-  .bannerWrapper {
-    .horizontal-row {
-      gap: 0;
+@media (max-width: 575px) {
+  .slick_wrapper {
+    .slider_title {
+      font-size: 18px;
+      max-width: 200px;
     }
-  }
-
-  .mobile_container {
-    width: 340px;
-  }
-
-  .menu-open {
-    width: 100%;
-    transition-delay: 0.1s;
-  }
-}
-
-@media (max-width: 768px) {
-  .slick-slider {
-    .slick-prev,
-    .slick-next {
+    .slider_description {
+      font-size: 14px;
+      margin-top: 6px;
+    }
+    .slider_content {
+      max-width: 250px;
+      padding-bottom: 15px;
+      left: 20px;
+    }
+    .slick-active .slider_content {
+      bottom: 40px;
+      opacity: 1;
+    }
+    .slick-dots {
       display: none !important;
     }
   }
 }
 
-.cards {
-  display: flex;
-}
 
-.card {
-  width: 100%;
-  background: #fff;
-  border-radius: 3px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-
-  .image {
-    img {
-      max-width: 100%;
-      border-top-left-radius: 3px;
-      border-top-right-radius: 3px;
-    }
-  }
-}
-
-.card.is-loading {
-  .image,
-  h2,
-  p {
-    background: #eee;
-    background: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
-    border-radius: 5px;
-    background-size: 200% 100%;
-    animation: 1.5s shine linear infinite;
-  }
-
-  .image {
-    height: 180px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-  }
-
-  h2 {
-    height: 27px;
-  }
-
-  p {
-    height: 60px;
-  }
-}
-
-@keyframes shine {
-  to {
-    background-position-x: -200%;
-  }
-}
