Home , Product , Listing , Inner are Ready

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -271,6 +271,25 @@ a {
 .multiSlider_container {
   margin-bottom: 40px;
 
+  .custom_slider_arr_right ,
+  .custom_slider_arr_left{
+    position: absolute;
+    top: 45%;
+    z-index: 99;
+    transition: 0.3s;
+    cursor: pointer;
+    transform: translate(-50% , -50%);
+    &:hover{
+      opacity: 0.7;
+    }
+  }
+  .custom_slider_arr_left{
+    left: 40px;
+  }
+  .custom_slider_arr_right{
+    right: 20px;
+  }
+
   .slick-slider {
     height: 100%;
     margin: 0 -10px;
@@ -436,9 +455,143 @@ a {
       opacity: 1;
     }
   }
-
 }
 
+.filter_color_line{
+  display: flex;
+  gap: 17px;
+  input{
+    display: none;
+  }
+  label{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+  }
+
+  .square_block{
+    width: 31px;
+    height: 31px;
+    border-radius: 50%;
+    // background: white;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    span{
+     width: 23px;
+     height: 23px;
+     border-radius: 50%;
+     transition: 0.3s;
+    }
+    &.silver{
+      span{
+        background: linear-gradient(0deg, #F7F8F8 0%, #BABABA 22%, #969696 37%, #AAAAAA 47%, #DDDEDE 67%, #F7F8F8 76%, #EFF0EF 81%, #D9DAD9 89%, #B6B6B6 98%, #AFAFAE 100%);
+      }
+    }
+    &.gold{
+      span{
+        background: linear-gradient(0deg, #EEDEBD 8%, #DEC6A5 17%, #D3BA87 29%, #A9936B 54%, #D3BA87 77%);
+      }
+    }
+    &.metal{
+      span{
+        background: linear-gradient(0deg, #EEDEBD 0%, #DEC6A5 17%, #CA9987 35%, #9B7260 56%, #CAA387 92%);
+      }
+    }
+    &:hover{
+      border: 1px solid rgba(0, 0, 0, 0.7);
+      span{
+        filter: blur(2px);
+      }
+    }
+  }
+
+  input[type="checkbox"]:checked + .square_block {
+    background: #D3BA87;
+    position: relative;
+    &::before{
+      content: "";
+      width: 39px;
+      height: 39px;
+      border-radius: 50%;
+      border: 1px solid #A9936B;
+      position: absolute;
+    }
+  }
+}
+
+.filter_stone_line{
+  input{
+    display: none;
+  }
+  label{
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    cursor: pointer;
+    
+  }
+  .check_label{
+    user-select: none;
+  }
+  .square_block{
+    // width: 22px;
+    // height: 22px;
+    // background: white;
+    // border: 1px solid rgba(#D3BA87 , 0.6);
+    span{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  input[type="checkbox"]:checked + .square_block {
+    // background: #D3BA87;
+    span svg {
+      opacity: 1;
+      fill: #D3BA87;
+    }
+  }
+}
+
+.btn_line{
+  display: flex;
+  padding-top: 25px;
+  align-items: center;
+  gap: 15px;
+  button{
+    width: 100%;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    transition: 0.3s;
+    cursor: pointer;
+    &.clear_btn{
+      color: #0c1b20;
+      background: transparent;
+      border: 1px solid black;
+      &:hover{
+        background: black;
+        color: white;
+      }
+    }
+    &.apply_btn{
+      color: white;
+      background: #D3BA87;
+      border: 1px solid #D3BA87;
+      &:hover{
+        opacity: 0.7;
+      }
+    }
+  }
+}
 
 .checkbox_line{
   position: relative;
