--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -20,3 +20,187 @@
 }
 
 
+@font-face {
+  font-family: 'icon';
+  font-display: 'auto';
+  src: url('/fonts/icons/icomoon.eot?zsmuo');
+  src: url('/fonts/icons/icomoon.eot?zsmuo#iefix') format('embedded-opentype'),
+  url('/fonts/icons/icomoon.ttf?zsmuo') format('truetype'),
+  url('/fonts/icons/icomoon.woff?zsmuo') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class*="icon_"], [class^="icon_"] {
+  &:before,
+  &:after {
+    font-family: 'icon' !important;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+}
+
+.icon-tick:before {
+  content: "\e925";
+}
+
+.icon_pin:before {
+  content: "\e91a";
+}
+
+.icon_heart:before {
+  content: "\e904";
+  color: black;
+}
+
+.icon_heartbg:before {
+  content: "\e904";
+  // content: "\e919";
+  color: black;
+}
+
+.icon_right_arrow:before {
+  content: "\e923";
+}
+
+.icon_menu_close:before {
+  content: "\e900";
+}
+
+.icon_left:before {
+  content: "\e901";
+}
+
+.icon_right:before {
+  content: "\e902";
+}
+
+.icon_flickr:before {
+  content: "\e903";
+}
+
+.icon_youtube:before {
+  content: "\e905";
+}
+
+.icon_behance:before {
+  content: "\e906";
+}
+
+.icon_facebook:before {
+  content: "\e907";
+}
+
+.icon_instagram:before {
+  content: "\e908";
+}
+
+.icon_linkedin:before {
+  content: "\e909";
+}
+
+.icon_ok:before {
+  content: "\e90a";
+}
+
+.icon_pinterest:before {
+  content: "\e910";
+}
+
+.icon_twitter:before {
+  content: "\e911";
+}
+
+.icon_vk:before {
+  content: "\e912";
+}
+
+.icon_account:before {
+  content: "\e90b";
+}
+
+.icon_arrow_bottom:before {
+  content: "\e90c";
+  color: #c0c0c0;
+}
+
+.icon_arrow_left:before {
+  content: "\e90d";
+  color: #c0c0c0;
+}
+
+.icon_arrow_right:before {
+  content: "\e90e";
+  color: #c0c0c0;
+}
+
+.icon_arrow_top:before {
+  content: "\e90f";
+  color: #c0c0c0;
+}
+
+.icon_cart:before {
+  content: "\e913";
+}
+
+.icon_check:before {
+  content: "\e914";
+}
+
+.icon_close:before {
+  content: "\e915";
+}
+
+.icon_delivery_express_home:before {
+  content: "\e916";
+}
+
+.icon_delivery_home:before {
+  content: "\e917";
+}
+
+.icon_facebook1:before {
+  content: "\e918";
+}
+
+.icon_instagram1:before {
+  content: "\e91b";
+}
+
+.icon_location:before {
+  content: "\e91c";
+}
+
+.icon_mail:before {
+  content: "\e91d";
+}
+
+.icon_phone:before {
+  content: "\e91e";
+}
+
+.icon_pick_up_in_store:before {
+  content: "\e924";
+}
+
+.icon_remove_label:before {
+  content: "\e91f";
+}
+
+.icon_search:before {
+  content: "\e920";
+}
+
+.icon_sign_in_lock:before {
+  content: "\e921";
+}
+
+.icon_trash:before {
+  content: "\e922";
+}
+
