--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -103,7 +103,7 @@ a {
     position: absolute;
     right: -8px;
     border-radius: 20px;
-    border: 1px solid rgba(0, 0, 0, 0.9);
+    border: 1px solid #A9936B;
     transition: 0.3s;
     outline: none;
     padding: 0 20px;
