Feat: Api Configuration

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -818,40 +818,33 @@ a {
   }
 }
 
-
 .loader {
   width: 48px;
   height: 48px;
-  display: inline-block;
-  position: relative;
-  border-width: 3px 2px 3px 2px;
-  border-style: solid dotted solid dotted;
-  border-color: #de3500 rgba(255, 255, 255, 0.3) #fff rgba(151, 107, 93, 0.3);
   border-radius: 50%;
+  position: relative;
+  animation: rotate 1s linear infinite
+}
+.loader::before {
+  content: "";
   box-sizing: border-box;
-  animation: 1s rotate linear infinite;
-
-  &:before,
-  &:after {
-    content: "";
-    top: 0;
-    left: 0;
-    position: absolute;
-    border: 10px solid transparent;
-    border-bottom-color: #fff;
-    transform: translate(-10px, 19px) rotate(-35deg);
-  }
-
-  &:after {
-    border-color: #de3500 #0000 #0000 #0000;
-    transform: translate(32px, 3px) rotate(-35deg);
-  }
+  position: absolute;
+  inset: 0px;
+  border-radius: 50%;
+  border: 5px solid #FFF;
+  animation: prixClipFix 2s linear infinite ;
 }
 
 @keyframes rotate {
-  100% {
-    transform: rotate(360deg);
-  }
+  100%   {transform: rotate(360deg)}
+}
+
+@keyframes prixClipFix {
+    0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
+    25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
+    50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
+    75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
+    100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
 }
 
 .login_popup{
