--- a/styles/product_inner.scss
+++ b/styles/product_inner.scss
@@ -20,6 +20,15 @@
 		width: 100%;
 		height: 100%;
 		position: relative;
+		video{
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			right: 0;
+			left: 0;
+			height: 100%;
+			width: 100%;
+		}
 	}
 
 	.small_images {
